--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,3 +17,9 @@ jobs:
       run: cargo build --verbose
     - name: Run tests
       run: cargo test --verbose
+    - name: Release Build
+      run: cargo build --release
+    - uses: actions/upload-artifact@v1
+      with:
+        name: pomors
+        path: target/release/pomors
