--- a/.github/workflows/mac-release-build.yml
+++ b/.github/workflows/mac-release-build.yml
@@ -10,6 +10,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v1
+      - uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
       - uses: actions-rs/cargo@v1.0.1
         with:
           name: Build
