--- a/.github/workflows/linux-release-build.yml
+++ b/.github/workflows/linux-release-build.yml
@@ -18,10 +18,7 @@ jobs:
         run: cargo build --verbose --release
       - name: Run tests
         run: cargo test --verbose --release
-      - name: Create zip
-        run: |
-          zip --junk-paths target/release/pomors_x86-64-linux target/release/pomors
       - uses: actions/upload-artifact@v1
         with:
           name: pomors_x86-64-linux.zip
-          path: target/release/pomors_x86-64-linux.zip
+          path: target/release/pomors
