--- a/.github/workflows/mac-release-build.yml
+++ b/.github/workflows/mac-release-build.yml
@@ -23,10 +23,7 @@ jobs:
           name: Test
           command: test
           args: --release
-      - name: Create zip
-        run: |
-          zip --junk-paths target/release/pomors_mac target/release/pomors
       - uses: actions/upload-artifact@v1
         with:
           name: pomors_mac.zip
-          path: target/release/pomors_mac.zip
+          path: target/release/pomors
