modify release build CI config to remove unnecessary description

--- a/.github/workflows/linux-release-build.yml
+++ b/.github/workflows/linux-release-build.yml
@@ -20,5 +20,5 @@ jobs:
         run: cargo test --verbose --release
       - uses: actions/upload-artifact@v1
         with:
-          name: pomors_x86-64-linux.zip
+          name: pomors_x86-64-linux
           path: target/release/pomors
