modify release CI config to configure trigger

--- a/.github/workflows/linux-release-build.yml
+++ b/.github/workflows/linux-release-build.yml
@@ -1,7 +1,9 @@
 name: linux-release-build
 
-# TODO: あとでリリースタグ咲く作成時に変更する
-on: [push]
+on:
+  push:
+    branches:
+      - master
 
 jobs:
   build:
